src/dialog/snapshots/tvision__dialog__colordlg__tests__snapshot_background.snap
---
source: src/dialog/colordlg.rs
expression: render_selector(&mut sel)
---
size: 12x2
cursor: hidden
text:
|█◘██████████|
|████████████|
attr:
|abacccdddeee|
|fffggghhhiii|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(0)
  b fg=BIOS(0) bg=BIOS(7)
  c fg=BIOS(1) bg=BIOS(0)
  d fg=BIOS(2) bg=BIOS(0)
  e fg=BIOS(3) bg=BIOS(0)
  f fg=BIOS(4) bg=BIOS(0)
  g fg=BIOS(5) bg=BIOS(0)
  h fg=BIOS(6) bg=BIOS(0)
  i fg=BIOS(7) bg=BIOS(0)
