src/dialog/snapshots/tvision__dialog__colordlg__tests__snapshot_foreground.snap
---
source: src/dialog/colordlg.rs
expression: render_selector(&mut sel)
---
size: 12x4
cursor: hidden
text:
|█◘██████████|
|████████████|
|████████████|
|████████████|
attr:
|abacccdddeee|
|fffggghhhiii|
|jjjkkklllmmm|
|nnnooopppqqq|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(0)
  b fg=BIOS(0) bg=BIOS(7)
  c fg=BIOS(1) bg=BIOS(0)
  d fg=BIOS(2) bg=BIOS(0)
  e fg=BIOS(3) bg=BIOS(0)
  f fg=BIOS(4) bg=BIOS(0)
  g fg=BIOS(5) bg=BIOS(0)
  h fg=BIOS(6) bg=BIOS(0)
  i fg=BIOS(7) bg=BIOS(0)
  j fg=BIOS(8) bg=BIOS(0)
  k fg=BIOS(9) bg=BIOS(0)
  l fg=BIOS(10) bg=BIOS(0)
  m fg=BIOS(11) bg=BIOS(0)
  n fg=BIOS(12) bg=BIOS(0)
  o fg=BIOS(13) bg=BIOS(0)
  p fg=BIOS(14) bg=BIOS(0)
  q fg=BIOS(15) bg=BIOS(0)
